--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+div.App {
+	margin: auto;
+	text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1#title {
+	text-transform: uppercase;
+	font-family: monospace;
+	font-weight: bold;
+	font-size: 48px;
+	color: #1c59c9;
+	text-shadow: 2px 1px #000;
+}
+
+.city {
+	padding: 6px;
+	margin: 4px;
+	font-family: monospace;
+	font-size: 16px;
+	border: 2px solid #e6df1e;
+	color: #1c59c9;
+}
+
+#submit {
+	padding: 6px;
+	margin: 4px;
+	width: 150px;
+	font-family: monospace;
+	font-size: 16px;
+	font-weight: bold;
+	color: #fff;
+	background-color: #0c2657;
+	border: 1px solid #0c2657;
+	font-weight: normal;
+}
+
+.weatherInfo {
+	list-style-type: none;
+	font-size: 20px;
+	text-align: left;
 }
