--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,5 +1,10 @@
-body {
+.container {
+	margin: auto;
+	width: 80%;
+	height: 80%;
 	background-image: url("images/clouds.jpg");
+	border-radius: 10px;
+	border: 4px solid #faf67f;
 }
 
 div.App {
@@ -8,6 +13,7 @@ div.App {
 }
 
 h1#title {
+	padding-top: 20px;
 	text-transform: uppercase;
 	font-family: monospace;
 	font-weight: bold;
@@ -22,7 +28,9 @@ h1#title {
 	padding: 6px;
 	margin: 4px;
 	font-family: monospace;
-	font-size: 16px;
+	font-size: 24px;
+	font-weight: bold;
+	text-transform: uppercase;
 	border: 2px solid #e6df1e;
 	color: #1c59c9;
 	text-align: center;
@@ -42,8 +50,22 @@ h1#title {
 	text-transform: uppercase;
 }
 
-.weatherInfo {
+.info  {
+	background-color: #fff;
 	list-style-type: none;
+	color: #000;
 	font-size: 20px;
 	text-align: left;
+	width: 50%;
+	height: 60%;
+	border-radius: 10px;
+	margin: 20px auto;
+	padding: 20px;
+	border: 4px solid #159fd1;
+}
+
+
+.info span {
+	color: #0477bf;
+	font-weight: bold;
 }
