--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -3,8 +3,8 @@ div.App {
 	text-align: center;
 }
 
-.header {
-	/*background-image: url("https://i.pinimg.com/originals/65/cd/0c/65cd0c9391cf8f96a861792162d7fd73.jpg");*/
+.text-white, .fiveDays {
+	position: relative;
 }
 
 h1#title {
